--- a/Resources/Private/Source/assets/less/left.less
+++ b/Resources/Private/Source/assets/less/left.less
@@ -48,16 +48,6 @@
     }
 
 
-    ul.nav  {
-      li a {
-        padding:0px;
-        line-height:3em;
-      }
-      li.active>a, li:hover>a {
-        background-color: red;
-      }
-    }
-
 
 
     /*
